[project]
name = "exabgp-rest-api"
version = "0.1.0"
description = "REST API for ExaBGP"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.115.12",
    "jinja2>=3.1.6",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.11.3",
]
